--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,1 +1,54 @@
-<p>login-page works!</p>
+<form class="card" [formGroup]="form" (ngSubmit)="submit()" >
+  <h2>Войти в панель администратора</h2>
+
+  <div
+    class="form-control"
+    [ngClass]="{invalid: form.get('email').touched && form.get('email').invalid}"
+  >
+    <label for="email">Email</label>
+    <input type="email" id="email" formControlName="email">
+    <div
+      class="validation"
+      *ngIf="form.get('email').touched && form.get('email').invalid"
+    >
+      <small *ngIf="form.get('email').errors.required">
+        Введите поле email.
+      </small>
+      <small *ngIf="form.get('email').errors.email">
+        Поле email должно быть введено в формате mail@mail.com.
+      </small>
+
+    </div>
+  </div>
+
+  <div
+    class="form-control"
+    [ngClass]="{invalid: form.get('password').touched && form.get('password').invalid}"
+  >
+    <label for="password">Пароль</label>
+    <input type="password" id="password" formControlName="password">
+    <div
+      class="validation"
+      *ngIf="form.get('password').touched && form.get('password').invalid"
+    >
+      <small *ngIf="form.get('password').errors.required">
+        Введите пароль.
+      </small>
+
+      <small *ngIf="form.get('password').errors.minlength">
+        Пароль должен быть не менее
+        {{ form.get('password').errors.minlength.requiredLength }}
+        символов. Сейчас он
+        {{ form.get('password').errors.minlength.actualLength }}
+        символа.
+      </small>
+
+    </div>
+  </div>
+
+  <button
+    type="submit"
+    class="btn btn-primary"
+    [disabled]="form.invalid"
+  >Войти</button>
+</form>
