--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,1 +1,20 @@
-<p>post-page works!</p>
+<div class="post">
+
+  <div class="header">
+    <h1>Post title</h1>
+    <button class="btn btn-link" routerLink="/">На главную</button>
+  </div>
+
+  <div class="info">
+    <strong>Автор</strong>
+    <small>12.12.2019</small>
+  </div>
+
+  <div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint cum quod quibusdam consequuntur culpa similique dolorum. Autem, neque minus officiis deleniti earum pariatur rerum natus incidunt excepturi possimus molestias! Ex at impedit enim sint maiores minima sit fugit, expedita harum pariatur accusamus in ducimus qui quo obcaecati repudiandae nulla veritatis!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint cum quod quibusdam consequuntur culpa similique dolorum. Autem, neque minus officiis deleniti earum pariatur rerum natus incidunt excepturi possimus molestias! Ex at impedit enim sint maiores minima sit fugit, expedita harum pariatur accusamus in ducimus qui quo obcaecati repudiandae nulla veritatis!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint cum quod quibusdam consequuntur culpa similique dolorum. Autem, neque minus officiis deleniti earum pariatur rerum natus incidunt excepturi possimus molestias! Ex at impedit enim sint maiores minima sit fugit, expedita harum pariatur accusamus in ducimus qui quo obcaecati repudiandae nulla veritatis!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint cum quod quibusdam consequuntur culpa similique dolorum. Autem, neque minus officiis deleniti earum pariatur rerum natus incidunt excepturi possimus molestias! Ex at impedit enim sint maiores minima sit fugit, expedita harum pariatur accusamus in ducimus qui quo obcaecati repudiandae nulla veritatis!</p>
+  </div>
+
+</div>
