--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -2,6 +2,13 @@
   <h2>Войти в панель администратора</h2>
 
   <div
+    class="alert alert-danger"
+    *ngIf="auth.error$ | async as error"
+  >
+    {{ error }}
+  </div>
+
+  <div
     class="form-control"
     [ngClass]="{invalid: form.get('email').touched && form.get('email').invalid}"
   >
