--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,11 +1,12 @@
 <form class="card" [formGroup]="form" (ngSubmit)="submit()" >
   <h2>Войти в панель администратора</h2>
 
-  <div
-    class="alert alert-danger"
-    *ngIf="auth.error$ | async as error"
-  >
+  <div class="alert alert-danger" *ngIf="auth.error$ | async as error" >
     {{ error }}
+  </div>
+
+  <div class="alert alert-info" *ngIf="message" >
+    {{ message }}
   </div>
 
   <div
