--- a/src/app/shared/components/post/post.component.html
+++ b/src/app/shared/components/post/post.component.html
@@ -1,15 +1,15 @@
 <div class="card">
   <div class="card-header">
-    <h2>Post title</h2>
-    <small>21.12.2019</small>
+    <h2>{{ post.title }}</h2>
+    <small>{{ post.date | date:'dd.MM.yyyy' }}</small>
   </div>
 
   <div>
-    <small>Sergey</small>
+    <small>{{ post.author }}</small>
   </div>
 
   <button
     class="btn btn-dark"
-    [routerLink]="['/post', 1233]"
+    [routerLink]="['/post', post.id]"
   >Открыть</button>
 </div>
