update html/css of homePage

--- a/src/app/admin/create-page/create-page.component.html
+++ b/src/app/admin/create-page/create-page.component.html
@@ -38,6 +38,13 @@
     </div>
   </div>
 
+  <div
+    class="form-control"
+  >
+    <label for="image">Изображение для превью:</label>
+    <input type="file" id="image" formControlName="image">
+  </div>
+
   <button
     type="submit"
     class="btn btn-block btn-dark"
