--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -1,5 +1,11 @@
 <nav class="navbar main">
-  <h1>Angular Blog</h1>
+  <div class="burger-container">
+    <div class="burger"></div>
+  </div>
+  <div class="search">
+    <div class="search__icon"><img src="../../../../assets/icons/search-icon.svg" alt="search-icon"></div>
+    <div class="search__text">Search...</div>
+  </div>
 </nav>
 
 <div class="container">
