--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -1,4 +1,26 @@
 .posts {
-  max-width: 600px;
-  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  margin: -1rem -1rem
+}
+
+.title-block {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.title-block__title {
+  text-transform: uppercase;
+  font-size: 3rem;
+  letter-spacing: 8;
+}
+
+.title-block__text {
+  color: var(--grey-color);
+  font-style: italic;
+}
+
+.card-wrapper {
+  width: calc(33% - 2rem);
+  margin: 1rem 1rem;
 }
