--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 :root {
   --primary-color: #dc3545;
   --dark-color: #333333;
+  --grey-color: #8f8f8f;
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
   --success-color: #28a745;
@@ -43,7 +44,7 @@ img {
 }
 
 .container {
-  max-width: 1100px;
+  max-width: 1440px;
   margin: auto;
   overflow: hidden;
   padding: 0 2rem;
@@ -72,7 +73,7 @@ img {
 .card {
   padding: 1rem;
   border: #ccc 1px dotted;
-  margin: 0.7rem 0;
+  margin: 0.5rem 0;
 
   &-header {
     display: flex;
@@ -264,16 +265,12 @@ table th {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.7rem 2rem;
+  padding: 2rem;
   z-index: 1;
-  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
   opacity: 0.9;
   margin-bottom: 1rem;
-
-  &.main {
-    justify-content: center;
-    border-bottom: 1px solid var(--dark-color);
-  }
 
   ul {
     display: flex;
